--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "postinstall": "prisma generate",
+    "postinstall": "bunx prisma generate",
     "build": "bun build index.ts --outfile dist/index.js --target=bun",
     "start": "bun run dist/index.js"
   },
