--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
-  "scripts": {
-    "postinstall": "bunx prisma generate",
-    "build": "bun build index.ts --outfile dist/index.js --target=bun",
-    "start": "bun run dist/index.js"
+ "scripts": {
+    "build": "bun build index.ts --target=bun --outfile=dist/index.js",
+    "start": "bun run dist/index.js",
+    "postinstall": "bunx prisma generate"
   },
   "devDependencies": {
     "@types/bun": "latest"
