--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
  "scripts": {
     "build": "bun build index.ts --target=bun --outfile=dist/index.js",
     "start": "bun run dist/index.js",
-    "postinstall": "bunx prisma generate"
+    "postinstall": "PRISMA_CLIENT_ENGINE_TYPE=binary PRISMA_CLI_QUERY_ENGINE_TYPE=binary bunx prisma generate"
   },
   "devDependencies": {
     "@types/bun": "latest"
